feat: make base rask

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -8,6 +8,7 @@
   <title>momentum</title>
 </head>
 <body>
+  <time class="day"></time>
   <time class="time"></time>
   <h1>
     <span class="greeting"></span>
