feat: add quote

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -12,7 +12,7 @@
     <time class="day"></time>
     <br>
     <time class="time"></time>
-    <button class="bg-reload" aria-label="перезагрузить фон" type="button"></button>
+    <button class="bg-reload" title="новый фон" type="button"></button>
     <h1 class="title">
       <span class="greeting"></span>
       <span class="name" contenteditable="true"></span>
@@ -20,6 +20,16 @@
     <h2 class="title" >Сегодня обязательно нужно: </h2>
     <h2 class="focus title" contenteditable="true"></h2>
 </div>
+
+<div class="quote-wrap">
+  <button class="btn-quote" title="новая подсказка"></button>
+  <figure class="quote">
+    <blockquote>
+      
+    </blockquote>
+  </figure>
+</div>
+
   <script src="script.js"></script>
 </body>
 </html>
