fix: fix styles

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -8,11 +8,27 @@
   <title>momentum</title>
 </head>
 <body>
+
+<div class="wrap-additions">
+    <div class="weather-wrap">
+  
+    </div>
+  
+    <div class="quote-wrap">
+      <button class="btn-quote" title="новая подсказка"></button>
+      <figure class="quote">
+        <blockquote>
+          
+        </blockquote>
+      </figure>
+    </div>
+</div>
+
 <div class="wrap">
     <time class="day"></time>
     <br>
     <time class="time"></time>
-    <button class="bg-reload" title="новый фон" type="button"></button>
+ 
     <h1 class="title">
       <span class="greeting"></span>
       <span class="name" contenteditable="true"></span>
@@ -21,14 +37,7 @@
     <h2 class="focus title" contenteditable="true"></h2>
 </div>
 
-<div class="quote-wrap">
-  <button class="btn-quote" title="новая подсказка"></button>
-  <figure class="quote">
-    <blockquote>
-      
-    </blockquote>
-  </figure>
-</div>
+<button class="bg-reload" title="новый фон" type="button"></button>
 
   <script src="script.js"></script>
 </body>
