--- a/momentum/index.html
+++ b/momentum/index.html
@@ -1,44 +1,51 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/owfont-regular.css">
   <title>momentum</title>
 </head>
+
 <body>
 
-<div class="wrap-additions">
+  <div class="wrap-additions">
     <div class="weather-wrap">
-  
+      <div class="city" contenteditable="true">Минск</div>
+      <i class="weather-icon owf"></i>
+      <div class="temperature"></div>
+      <div class="weather-description"></div>
     </div>
-  
+
     <div class="quote-wrap">
       <button class="btn-quote" title="новая подсказка"></button>
       <figure class="quote">
         <blockquote>
-          
+
         </blockquote>
       </figure>
     </div>
-</div>
+  </div>
 
-<div class="wrap">
+  <div class="wrap">
     <time class="day"></time>
     <br>
     <time class="time"></time>
- 
+
     <h1 class="title">
       <span class="greeting"></span>
       <span class="name" contenteditable="true"></span>
     </h1>
-    <h2 class="title" >Сегодня обязательно нужно: </h2>
+    <h2 class="title">Сегодня обязательно нужно: </h2>
     <h2 class="focus title" contenteditable="true"></h2>
-</div>
+  </div>
 
-<button class="bg-reload" title="новый фон" type="button"></button>
+  <button class="bg-reload" title="новый фон" type="button"></button>
 
   <script src="script.js"></script>
 </body>
+
 </html>
