fix: fix weather city

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -14,7 +14,7 @@
 
   <div class="wrap-additions">
     <div class="weather-wrap">
-      <div class="city" contenteditable="true">Минск</div>
+      <div class="city" contenteditable="true"></div>
       <i class="weather-icon owf"></i>
       <div class="temperature"></div>
       <div class="weather-description"></div>
