refactor: add mobile style

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -16,7 +16,7 @@
     <div class="weather-wrap">
       <label class="city_label">
         <input class="city_input" type="text" placeholder="Ваш город">
-        <span class="city_text city hidden">Нальчик</span>
+        <span class="city_text city hidden"></span>
       </label>
       <br>
       <i class="weather-icon owf"></i>
