fix; change bgr

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="quote-wrap">
-      <button class="btn-quote" title="новая подсказка"></button>
+      <button class="btn-quote" title="новая подсказка" width='25' ></button>
       <figure class="quote">
         <blockquote>
         </blockquote>
@@ -37,6 +37,8 @@
 
   <div class="wrap">
     <time class="day"></time>
+    <br>
+    <time class="weekday"></time>
     <br>
     <time class="time"></time>
     <br>
